2008-08-22  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d.cpp: applied patch from
	James Ketreno <jketreno@linux.intel.com> that frees up a body when it
	is being removed from the container.

2008-07-30  Øyvind Kolås  <pippin@o-hand.com>

	Updated Box2D from upstream svn.

	* box2d/: updated to upstream box2d (svn revision 170).
	* box2d/Makefile.am: recreated to match source.
	* clutter-box2d/clutter-box2d-actor.cpp: changed how static actors are
	created to reflect new upstream methods.
	* clutter-box2d/clutter-box2d.cpp: world->Step() got another steps
	argument.

2008-07-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter-box2d.pc.in: Update the pc file. (Gwenole Beauchesne)

2008-07-23  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac:
	* Makefile.am:
	* clutter-box2d/Makefile.am: Build against Clutter 0.8.

	* doc/reference/clutter-box2d-sections.txt: Documentation fixes.

	* box2d/Source/Collision/b2BroadPhase.cpp:
	* box2d/Source/Common/b2BlockAllocator.cpp:
	* box2d/Source/Dynamics/Contacts/b2CircleContact.cpp:
	* box2d/Source/Dynamics/Contacts/b2PolyAndCircleContact.cpp:
	* box2d/Source/Dynamics/Contacts/b2PolyContact.cpp: Fix
	build by including cstring (needed for memcpy and memset).

2008-07-04  Øyvind Kolås  <pippin@o-hand.com>

	* examples/blockbox.c: removed reference to custom_curosr.

2008-07-04  Øyvind Kolås  <pippin@o-hand.com>

	Modified to work better with XInput enabled clutter.

	* clutter-box2d/clutter-box2d-actor.cpp:
	* examples/blockbox.c: (main):
	* examples/scene-about.c: (scene_about):
	* examples/scene-bridge.c: (scene_bridge):
	* examples/scene-chain.c: (scene_chain):
	* examples/scene-table.c: (scene_table):
	* examples/util.c: (add_hand):

2008-06-25  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-actor.cpp: adapt to new multiple device
	support in Clutter-0.7.

2008-06-23  Øyvind Kolås  <pippin@o-hand.com>

	* clutter-box2d/clutter-box2d-util.c: made the